# translate

./: .gitignore  Cargo.toml  LICENSE  README.md
auth_files/: deepl_auth_info.json  gtranslate_auth_info.json
example/: http_post_test.py  http_post_test.sh
src/: handler.rs  main.rs  target_language.rs
src/handler/: request_handler.rs  service_handler.rs  target_language.rs
