[package]
name = "translate"
version = "0.1.0"
authors = ["tkmsikd <tikeda1618@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"
serde_json = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
curl = "0.4.42"
project-root = "0.2.2"
